--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="/image/favicon.ico">
+<link rel="icon" type="image/png" href="/image/favicon-192x192.png" sizes="192x192">
 <title>munieru.jp</title>
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
