--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 <link rel="icon" href="/image/favicon.ico">
 <link rel="icon" type="image/png" href="/image/favicon-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="/image/android-chrome-192x192.png" sizes="192x192">
+<link rel="apple-touch-icon" href="/image/apple-touch-icon-180x180.png" sizes="180x180">
 <title>munieru.jp</title>
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
