--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="ムニエルのウェブサイト" />
 <link rel="icon" href="/image/favicon.ico">
 <link rel="icon" type="image/png" href="/image/favicon-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="/image/android-chrome-192x192.png" sizes="192x192">
