--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ムニエルのウェブサイト" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://munieru.jp" />
+<meta property="og:title" content="munieru.jp" />
+<meta property="og:description" content="ムニエルのウェブサイト" />
+<meta property="og:site_name" content="munieru.jp" />
+<meta property="og:image" content="http://munieru.jp/image/favicon-256x256.png" />
+<meta property="og:image:width" content="256" />
+<meta property="og:image:height" content="256" />
 <link rel="icon" href="/image/favicon.ico">
 <link rel="icon" type="image/png" href="/image/favicon-256x256.png" sizes="256x256">
 <link rel="icon" type="image/png" href="/image/android-chrome-192x192.png" sizes="192x192">
