--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 <meta property="og:image" content="http://munieru.jp/image/favicon-256x256.png" />
 <meta property="og:image:width" content="256" />
 <meta property="og:image:height" content="256" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@munieru_jp" />
 <link rel="icon" href="/image/favicon.ico">
 <link rel="icon" type="image/png" href="/image/favicon-256x256.png" sizes="256x256">
 <link rel="icon" type="image/png" href="/image/android-chrome-192x192.png" sizes="192x192">
